--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ importlib-metadata==4.10.1
 importlib-resources==5.4.0
 iniconfig==1.1.1
 ipykernel==6.7.0
-ipython==8.0.1
+ipython
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
 iso-639==0.4.5
@@ -100,7 +100,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.4
 nltk==3.6.7
 notebook==6.4.7
-numpy==1.22.1
+numpy
 oauthlib==3.1.1
 overrides==3.1.0
 packaging==21.3
@@ -181,16 +181,16 @@ threadpoolctl==3.0.0
 tokenizers==0.10.3
 toml==0.10.2
 tomli==1.2.3
-torch==1.8.0+cu111
+torch==1.8.0
 torchaudio==0.8.0
 torchmetrics==0.7.0
-torchvision==0.9.0+cu111
+torchvision==0.9.0
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
 transformers==4.12.0
 typer==0.4.0
-typing_extensions==4.0.1
+typing_extensions
 urllib3==1.26.8
 wandb==0.12.9
 wasabi==0.9.0
